[gd_scene load_steps=9 format=3 uid="uid://t2wgnk2pyono"]

[ext_resource type="Script" uid="uid://dfpo4jlitdpyf" path="res://player/player.gd" id="1_g1dw6"]
[ext_resource type="Texture2D" uid="uid://bfydf8haqsjto" path="res://art/playerGrey_walk1.png" id="2_hqtel"]
[ext_resource type="PackedScene" uid="uid://cwdins0unq06a" path="res://player/weapons/projectile.tscn" id="2_sweqy"]
[ext_resource type="Shader" uid="uid://bhh5naq1x7pmc" path="res://shaders/flash_hit.gdshader" id="3_qjkh3"]
[ext_resource type="Texture2D" uid="uid://bn0n0uh4hsyxe" path="res://art/playerGrey_walk2.png" id="3_sweqy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g6k8r"]
shader = ExtResource("3_qjkh3")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_2hs0m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hqtel")
}, {
"duration": 1.0,
"texture": ExtResource("3_sweqy")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1jxqw"]
radius = 52.0
height = 126.0

[node name="Player" type="Area2D"]
collision_mask = 2
script = ExtResource("1_g1dw6")
Bullet = ExtResource("2_sweqy")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_g6k8r")
sprite_frames = SubResource("SpriteFrames_2hs0m")
animation = &"walk"
frame = 1
frame_progress = 0.0021779

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1jxqw")

[node name="InvulTimer" type="Timer" parent="."]
one_shot = true

[node name="WeaponCD" type="Timer" parent="."]
wait_time = 2.0

[node name="Marker2D" type="Marker2D" parent="."]

[node name="FlashHitTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="InvulTimer" to="." method="_on_invul_timer_timeout"]
[connection signal="timeout" from="WeaponCD" to="." method="_on_weapon_cd_timeout"]
[connection signal="timeout" from="FlashHitTimer" to="." method="_on_flash_hit_timer_timeout"]
